<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_details"
        android:name="com.ariefzuhri.gizee.feature.details.presentation.DetailsFragment"
        android:label="@string/title_details"
        app:moduleName="details"
        tools:layout="@layout/fragment_details">

        <argument
            android:name="food"
            app:argType="com.ariefzuhri.gizee.core.database.domain.model.Food"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/fragment_favorites"
        android:name="com.ariefzuhri.gizee.feature.favorites.presentation.FavoritesFragment"
        android:label="@string/title_favorites"
        app:moduleName="favorites"
        tools:layout="@layout/fragment_favorites" />

    <dialog
        android:id="@+id/fragment_full_nutrients"
        android:name="com.ariefzuhri.gizee.feature.fullnutrients.presentation.FullNutrientsFragment"
        android:label="@string/title_fullnutrients"
        app:moduleName="fullnutrients"
        tools:layout="@layout/fragment_full_nutrients">

        <argument
            android:name="foods"
            app:argType="com.ariefzuhri.gizee.core.database.domain.model.Food[]"
            app:nullable="true" />

        <argument
            android:name="rawNutrients"
            app:argType="com.ariefzuhri.gizee.core.database.domain.model.Nutrient[]"
            app:nullable="true" />

    </dialog>

    <dialog
        android:id="@+id/fragment_history"
        android:name="com.ariefzuhri.gizee.feature.history.presentation.HistoryFragment"
        android:label="@string/title_history"
        app:moduleName="history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.ariefzuhri.gizee.feature.home.presentation.HomeFragment"
        android:label="@string/title_home"
        app:moduleName="home"
        tools:layout="@layout/fragment_home">

        <argument
            android:name="selected_query"
            android:defaultValue=""
            app:argType="string" />

        <action
            android:id="@+id/action_home_to_favorites"
            app:destination="@id/fragment_favorites"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_home_to_history"
            app:destination="@id/fragment_history" />

        <action
            android:id="@+id/action_home_to_search_results"
            app:destination="@id/fragment_search_results"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/fragment_nutrition_facts"
        android:name="com.ariefzuhri.gizee.feature.nutritionfacts.presentation.NutritionFactsFragment"
        android:label="@string/title_nutritionfacts"
        app:moduleName="nutritionfacts"
        tools:layout="@layout/fragment_nutrition_facts" />

    <fragment
        android:id="@+id/fragment_search_results"
        android:name="com.ariefzuhri.gizee.feature.searchresults.presentation.SearchResultsFragment"
        android:label="@string/title_searchresults"
        app:moduleName="searchresults"
        tools:layout="@layout/fragment_search_results">

        <argument
            android:name="query"
            android:defaultValue=""
            app:argType="string" />

        <action
            android:id="@+id/action_search_results_to_details"
            app:destination="@id/fragment_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <action
        android:id="@+id/action_global_to_details"
        app:destination="@id/fragment_details"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    <action
        android:id="@+id/action_global_to_full_nutrients"
        app:destination="@id/fragment_full_nutrients"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />

</navigation>