<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/blue_transparent"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo"
            style="@style/ImageView"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:contentDescription="@string/cd_img_photo_food"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextView.Header.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/loading"
            app:layout_constraintEnd_toStartOf="@+id/ib_more"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toTopOf="@+id/img_photo" />

        <TextView
            android:id="@+id/tv_calories"
            style="@style/TextView.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_measure"
            style="@style/TextView.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_calories" />

        <ImageButton
            android:id="@+id/ib_more"
            style="@style/ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/view_more"
            android:src="@drawable/ic_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>